public class Main {

    public static void main(String[] args) {


        MainWindow mainWindow = new MainWindow();
        mainWindow.setVisible(true);


    }
}
