
public enum Player {
    X, O, NOBODY, DRAW
}
