@startuml

title __BEAD2_02's Class Diagram__\n

  package  {
    class BaseWindow {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class MainWindow {
    }
  }
  

  package  {
    class Model {
    }
  }
  

  package  {
    enum Player {
    }
  }
  

  package  {
    class TileButton {
    }
  }
  

  package  {
    class Window {
    }
  }
  

  BaseWindow -up-|> JFrame
  MainWindow -up-|> BaseWindow
  Model o-- Player : actualPlayer
  TileButton -up-|> JButton
  Window -up-|> BaseWindow
  Window o-- Model : model
  Window o-- MainWindow : mainWindow


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
